Fix byline content gaps on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -802,7 +802,7 @@ blockquote p {
 }
 
 .author-name {
-    margin: 0.5rem 0 0 0;
+    margin: 0;
     font-size: 1.25rem;
     font-weight: 500;
 }
@@ -1757,7 +1757,7 @@ nav.pagination {
     .byline-meta-content {
         padding-top: 2.5rem;
         margin-top: 2.5rem!important;
-        gap: 1rem;
+        gap: 0;
         text-align: center;
     }
     
@@ -1769,12 +1769,12 @@ nav.pagination {
     
     .author-name {
         font-size: 1.125rem;
-        margin: 0.25rem 0;
+        margin: 0!important;
     }
     
     .byline-meta-date {
         font-size: 0.9rem;
-        margin-top: 0.5rem;
+        margin-top: 0;
     }
 }
 
@@ -2460,7 +2460,7 @@ nav.pagination {
 }
 
 .author-name {
-    padding: 0.25rem 0;
+    padding: 0;
 }
 
 .author-link {
